--- a/style2.scss
+++ b/style2.scss
@@ -23,6 +23,7 @@ $txt_color: #ffffff;
 html {
   background-color: #f5f5f5;
   // scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* HEADER-WRAPPER */
